fix: add overflow hidden to wrapper

--- a/src/feedback.scss
+++ b/src/feedback.scss
@@ -4,6 +4,7 @@
   height: 100%;
   width: 100%;
   bottom: 0;
+  overflow: hidden;
 }
 
 #feedback-btn-wrapper {
